--- a/style.css
+++ b/style.css
@@ -19,9 +19,15 @@ html, body {
     overflow-x: hidden;
 }
 
+body {
+    max-width: 100vw;
+    overflow-x: hidden !important;
+    position: relative;
+}
+
 .card {
     width: 100%;
-    max-width: 100vw;
+    max-width: 100%;
     background: linear-gradient(135deg, #16001f, #5b548a);
     color: #fff;
     margin: 0 auto;
